--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Todo List</title>
     <link rel="stylesheet" href="./index.css"></head>
 <body>
-    <input id="nameInput" type="text" placeholder="당신의 이름을 입력하세요" name="name" value="" onkeyup="if(window.event.keyCode==13){addName()}">
     <h1 id="title">Todo List</h1>
-    <input id="todoInput" type="text" placeholder="Todo 입력하기" name="todo" value="" onkeyup="if(window.event.keyCode==13){addTodo()}">
+    <input id="todoInput" type="text" placeholder="Todo 입력하기" name="todo" value="">
     <button id="todoSubmit" onclick="addTodo()" value="+">+</button>
     <div id="todoList"></div>
 </body>
