fix: html inline 이벤트 삭제

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./index.css"></head>
 <body>
     <h1 id="title">Todo List</h1>
-    <input id="todoInput" type="text" placeholder="Todo 입력하기" name="todo" value="" onkeyup="enterkey()">
-    <button id="todoSubmit" onclick="addTodo()" value="+">+</button>
+    <input id="todoInput" type="text" placeholder="Todo 입력하기" name="todo" value="">
+    <button id="todoSubmit" value="+">+</button>
     <div id="todoList"></div>
 </body>
 <script src="./js/Todo.js"></script>
