refactor: 폴더 구조를 분리

--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
     <button id="todoSubmit" value="+">+</button>
     <div id="todoList"></div>
 </body>
-<script src="./js/Todo.js"></script>
+<script type="module" src="./js/main.js"></script>
 </html>
